--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ requests==2.7.0
 django-ckeditor==5.0.2
 django-wysiwyg==0.7.1
 python-social-auth==0.2.12
-MySQL-python==1.2.5
+#MySQL-python==1.2.5
 django-uuidfield==0.5.0
 docutils==0.12
 simplejson==3.8.2
